--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,15 @@
     "require": {
         "php": "~5.5",
         "willdurand/negotiation": "v2.0.0-alpha1",
-        "innmind/rest-server": "dev-develop"
+        "innmind/rest-server": "dev-develop",
+        "symfony/http-kernel": "~2.7",
+        "symfony/dependency-injection": "~2.7",
+        "symfony/config": "~2.7"
     },
     "autoload": {
         "psr-0": {
             "Innmind\\RestBundle": ""
         }
-    }
+    },
+    "target-dir": "Innmind/RestBundle"
 }
