--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,3 +1,17 @@
 parameters:
 
 services:
+    innmind_rest.formats:
+        class: Innmind\Rest\Server\Formats
+
+    innmind_rest.encoder.json:
+        class: Innmind\Rest\Server\Serializer\Encoder\JsonEncoder
+        tags:
+            - { name: serializer.encoder }
+            - { name: innmind_rest.server.format, format: json, mime: application/json, priority: 10 }
+
+    innmind_rest.encoder.form:
+        class: Innmind\rest\Server\Serializer\Encoder\FormEncoder
+        tags:
+            - { name: serializer.encoder }
+            - { name: innmind_rest.server.format, format: form, mime: application/x-www-form-urlencoded }
