--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,5 @@ script: phpunit --coverage-clover=coverage.clover
 after_script:
     - wget https://scrutinizer-ci.com/ocular.phar
     - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+notifications:
+    slack: innmind:nAiLaAi6RU4wGEAdL6FuKdyF
