add request listener to verify content-type and accept headers and determine request format

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,5 @@
 imports:
+    - { resource: 'listeners.yml' }
     - { resource: serializer.yml }
     - { resource: registry.yml }
     - { resource: storage.yml }
