--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "innmind/rest-server": "dev-develop",
         "symfony/http-kernel": "~2.7",
         "symfony/dependency-injection": "~2.7",
-        "symfony/config": "~2.7"
+        "symfony/config": "~2.7",
+        "symfony/framework-bundle": "~2.7"
     },
     "autoload": {
         "psr-0": {
