--- a/Resources/config/serializer.yml
+++ b/Resources/config/serializer.yml
@@ -10,3 +10,9 @@ services:
         tags:
             - { name: serializer.encoder }
             - { name: innmind_rest.server.format, format: form, mime: application/x-www-form-urlencoded }
+
+    innmind_rest.normalizer.resource:
+        class: Innmind\Rest\Server\Serializer\Normalizer\ResourceNormalizer
+        arguments: [@innmind_rest.resource_builder]
+        tags:
+            - { name: serializer.normalizer }
