--- a/Resources/config/listeners.yml
+++ b/Resources/config/listeners.yml
@@ -10,6 +10,7 @@ services:
         arguments:
             - @innmind_rest.server.validator
             - @innmind_rest.request.parser
+            - @event_dispatcher
         tags:
             - { name: kernel.event_subscriber }
 
