--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ php:
     - 5.5
     - 5.6
     - 7.0
-before_script: composer install --no-dev --prefer-source
+before_script: composer install --prefer-source
 script: phpunit --coverage-clover=coverage.clover
 after_script:
     - if [ "$TRAVIS_PHP_VERSION" != "7.0" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi
