--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ php:
     - 5.5
     - 5.6
     - 7.0
+services:
+    - neo4j
 before_script: composer install --prefer-source
 script: phpunit --coverage-clover=coverage.clover
 after_script:
