--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,14 @@ php:
     - 5.5
     - 5.6
     - 7.0
-services:
-    - neo4j
-before_script: composer install --prefer-source
+jdk:
+    - oraclejdk7
+before_script:
+    - wget dist.neo4j.org/neo4j-community-2.2.5-unix.tar.gz
+    - tar -xzf neo4j-community-2.2.5-unix.tar.gz
+    - sed -i.bak s/dbms.security.auth_enabled=true/dbms.security.auth_enabled=false/g neo4j-community-2.2.5/conf/neo4j-server.properties
+    - neo4j-community-2.2.5/bin/neo4j start
+    - composer install --prefer-source
 script: phpunit --coverage-clover=coverage.clover
 after_script:
     - if [ "$TRAVIS_PHP_VERSION" != "7.0" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi
