--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": ">=5.5",
         "willdurand/negotiation": "v2.0.0-alpha1",
-        "innmind/rest-server": "dev-develop",
+        "innmind/rest-server": "~1.0",
         "symfony/http-kernel": "~2.7",
         "symfony/dependency-injection": "~2.7",
         "symfony/config": "~2.7",
