--- a/Resources/config/listeners.yml
+++ b/Resources/config/listeners.yml
@@ -1,7 +1,10 @@
 services:
     innmind_rest.listener.request:
         class: Innmind\RestBundle\EventListener\RequestListener
-        arguments: [@innmind_rest.request.parser]
+        arguments:
+            - @innmind_rest.request.parser
+            - @innmind_rest.route_loader
+            - @innmind_rest.server.registry
         tags:
             - { name: kernel.event_subscriber }
 
