--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,11 @@
         "symfony/http-kernel": "~2.7",
         "symfony/dependency-injection": "~2.7",
         "symfony/config": "~2.7",
-        "symfony/framework-bundle": "~2.7"
+        "symfony/framework-bundle": "~2.7",
+        "innmind/rest-client": "^1.0",
+        "symfony/filesystem": "~2.7",
+        "innmind/url-resolver": "^1.0",
+        "guzzlehttp/guzzle": "~5.0"
     },
     "autoload": {
         "psr-0": {
