add rest server registry configurator definition (to apply compiler passes)

--- a/Resources/config/registry.yml
+++ b/Resources/config/registry.yml
@@ -1,6 +1,7 @@
 services:
     innmind_rest.server.registry:
         class: Innmind\Rest\Server\Registry
+        configurator: ["@innmind_rest.server.definition_compiler", process]
 
     innmind_rest.server.definition_compiler:
         class: Innmind\Rest\Server\DefinitionCompiler
