--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,59 +1,4 @@
 imports:
-    - { resource: 'listeners.yml' }
     - { resource: serializer.yml }
-    - { resource: registry.yml }
-    - { resource: storage.yml }
     - { resource: client.yml }
-
-services:
-    innmind_rest.formats:
-        class: Innmind\Rest\Server\Formats
-
-    innmind_rest.entity_builder:
-        class: Innmind\Rest\Server\EntityBuilder
-        arguments:
-            - @property_accessor
-            - @event_dispatcher
-
-    innmind_rest.resource_builder:
-        class: Innmind\Rest\Server\ResourceBuilder
-        arguments:
-            - @property_accessor
-            - @event_dispatcher
-
-    innmind_rest.request.parser:
-        class: Innmind\Rest\Server\Request\Parser
-        arguments:
-            - @serializer
-            - @innmind_rest.formats
-            - @innmind_rest.negotiator
-
-    innmind_rest.negotiator:
-        class: Negotiation\Negotiator
-        public: false
-
-    innmind_rest.route_loader:
-        class: Innmind\RestBundle\RouteLoader
-        arguments: [@innmind_rest.server.route_loader]
-        tags:
-            - { name: routing.loader }
-
-    innmind_rest.server.route_loader:
-        class: Innmind\Rest\Server\RouteLoader
-        public: false
-        arguments:
-            - @event_dispatcher
-            - @innmind_rest.server.registry
-            - ~
-
-    innmind_rest.server.validator:
-        class: Innmind\Rest\Server\Validator
-        arguments: [@validator]
-
-    innmind_rest.server.route_finder:
-        class: Innmind\Rest\Server\Routing\RouteFinder
-        public: false
-
-    innmind_rest.server.paginator:
-        class: Innmind\Rest\Server\Paginator
-        public: false
+    - { resource: server/main.yml }
