--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "innmind/rest-client": "~2",
         "symfony/filesystem": "~2.7",
         "innmind/url-resolver": "^1.0",
-        "guzzlehttp/guzzle": "~5.0"
+        "guzzlehttp/guzzle": "~5.0",
+        "symfony/console": "~2.7"
     },
     "autoload": {
         "psr-0": {
