change the way some service arguments are declared

--- a/Resources/config/client.yml
+++ b/Resources/config/client.yml
@@ -1,7 +1,8 @@
 services:
     innmind_rest.client:
         class: Innmind\RestBundle\Client
-        arguments: [@innmind_rest.client.server_factory]
+        arguments:
+            - @innmind_rest.client.server_factory
 
     innmind_rest.client.server_factory:
         class: Innmind\RestBundle\Client\ServerFactory
