--- a/Resources/config/server/main.yml
+++ b/Resources/config/server/main.yml
@@ -15,9 +15,9 @@ services:
     innmind_rest.server.request_parser:
         class: Innmind\Rest\Server\Request\Parser
         arguments:
-            - @serializer
-            - @innmind_rest.server.formats
-            - @innmind_rest.server.negotiator
+            - '@serializer'
+            - '@innmind_rest.server.formats'
+            - '@innmind_rest.server.negotiator'
 
     innmind_rest.server.formats:
         class: Innmind\Rest\Server\Formats
@@ -29,26 +29,26 @@ services:
     innmind_rest.server.entity_builder:
         class: Innmind\Rest\Server\EntityBuilder
         arguments:
-            - @property_accessor
-            - @event_dispatcher
+            - '@property_accessor'
+            - '@event_dispatcher'
 
     innmind_rest.server.resource_builder:
         class: Innmind\Rest\Server\ResourceBuilder
         arguments:
-            - @property_accessor
-            - @event_dispatcher
+            - '@property_accessor'
+            - '@event_dispatcher'
 
     innmind_rest.server.controller:
         class: Innmind\RestBundle\Controller\ResourceController
         arguments:
-            - @innmind_rest.server.storages
-            - @router
-            - @innmind_rest.server.registry
+            - '@innmind_rest.server.storages'
+            - '@router'
+            - '@innmind_rest.server.registry'
 
     innmind_rest.server.validator:
         class: Innmind\Rest\Server\Validator
         arguments:
-            - @validator
+            - '@validator'
 
     innmind_rest.server.paginator:
         class: %innmind_rest.server.paginator.class%
