--- a/Resources/config/server/registry.yml
+++ b/Resources/config/server/registry.yml
@@ -2,7 +2,7 @@ services:
     innmind_rest.server.registry:
         class: Innmind\Rest\Server\Registry
         configurator:
-            - @innmind_rest.server.definition_compiler
+            - '@innmind_rest.server.definition_compiler'
             - process
 
     innmind_rest.server.definition_compiler:
@@ -24,7 +24,7 @@ services:
         class: Innmind\Rest\Server\CompilerPass\StorageValidationPass
         public: false
         arguments:
-            - @innmind_rest.server.storages
+            - '@innmind_rest.server.storages'
         tags:
             - { name: innmind_rest.server.definition_pass }
 
