--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,15 @@
     "require": {
         "php": ">=5.5",
         "innmind/rest-server": "~2",
-        "symfony/http-kernel": "~2.7",
-        "symfony/dependency-injection": "~2.7",
-        "symfony/config": "~2.7",
-        "symfony/framework-bundle": "~2.7",
+        "symfony/http-kernel": "~2.7|~3.0",
+        "symfony/dependency-injection": "~2.7|~3.0",
+        "symfony/config": "~2.7|~3.0",
+        "symfony/framework-bundle": "~2.7|~3.0",
         "innmind/rest-client": "~2",
-        "symfony/filesystem": "~2.7",
+        "symfony/filesystem": "~2.7|~3.0",
         "innmind/url-resolver": "^1.0",
         "guzzlehttp/guzzle": "~5.0",
-        "symfony/console": "~2.7"
+        "symfony/console": "~2.7|~3.0"
     },
     "autoload": {
         "psr-0": {
